Wed Jun 17 08:10:38 2009  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace: added.  objspace library extends some methods to
	  ObjectSpace module.

Wed Jun 17 08:14:01 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (nucomp_coerce): accepts Complex instances.

	* rational.c (nurat_coerce): accepts Rational
	  instances. [ruby-core:23859]

Wed Jun 17 07:36:22 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/webrick/httputils.rb (parse_form_data): escape boundary of
	  multipart/form-data when embed in regexp.

Wed Jun 17 07:24:26 2009  Koichi Sasada  <ko1@atdot.net>

	* array.c (rb_ary_memsize): added.

	* io.c (rb_io_memsize): added.

	* regcomp.c (onig_memsize): added.

	* string.c (rb_str_memsize): added.

	* transcode.c (rb_transcoding_memsize, rb_econv_memsize): added.

	* variable.c (rb_geneic_ivar_memsize): added.

Wed Jun 17 07:04:33 2009  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_memsize): added.  Use RTypedData instead of RData
	  for ISeq.

	* vm.c (env_memsize, vm_memsize, thread_memsize): added.  Use
	  RTypedData instead of RData for Env, VM, Thread.

Wed Jun 17 06:48:28 2009  Koichi Sasada  <ko1@atdot.net>

	* st.c, include/ruby/st.h (st_memsize): added.  This function returns
	  the memory usage of st_talbe.

Wed Jun 17 06:19:06 2009  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: New structure RTypedData, added.
	  This structure incldues more explicit type information for
	  T_DATA objects.  If RData(obj)->dfree is immediate value `1' on
	  T_DATA object obj, obj is needed to be accessed with RTYPEDDATA(obj)
	  instead of RDATA(obj).  A RTypedData structure points the structure
	  rb_typed_data_t.  rb_typed_data_t includes information such as the
	  type name of this data, mark and free function what RData includes,
	  and memsize function show how data consuming the memory size.
	  Note that you do not need any change existing T_DATA objects.
	  If you use RDataType instead of RData on T_DATA object,